# WebDev-Project-1

./: auth_user.json  db.sqlite3  loja.json  loja_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
loja/: admin.py  models.py  serializers.py  views.py
loja/migrations/: 0001_initial.py  0002_item_quantidade_item_valor.py  0003_carrinho_item_quantidade.py  0004_alter_carrinho_item_options.py  0005_remove_carrinho_item_item.py  0006_remove_carrinho_itens_remove_item_nome_and_more.py  0007_remove_carrinho_item_carrinho_delete_carrinho.py  0008_item_foto.py
